Deleted more unused files. Removed unused imports.